fix: add cursor-pointer to back buttons per UI/UX Pro Max guidelines

--- a/app/views/provinces/_form.html.erb
+++ b/app/views/provinces/_form.html.erb
@@ -90,7 +90,7 @@
 
   <%# Actions - Centered %>
   <div class="flex items-center justify-center gap-4 mt-6">
-    <%= link_to provinces_path, class: "inline-flex items-center px-6 py-3 border border-gray-300 rounded-lg text-gray-700 bg-white hover:bg-gray-50 font-medium transition-all" do %>
+    <%= link_to provinces_path, class: "inline-flex items-center px-6 py-3 border border-gray-300 rounded-lg text-gray-700 bg-white hover:bg-gray-50 font-medium transition-all cursor-pointer" do %>
       <i class="fa-solid fa-arrow-left mr-2"></i>
       Quay lại
     <% end %>
