--- a/app/views/provinces/new.html.erb
+++ b/app/views/provinces/new.html.erb
@@ -1,10 +1,11 @@
-<%# TASK-068: New province page %>
-<div class="max-w-2xl mx-auto">
+<%# TASK-068: New province page - Full width %>
+<div class="w-full">
   <div class="mb-6">
     <h1 class="text-2xl font-bold text-gray-900 flex items-center">
       <i class="fa-solid fa-plus-circle text-brand-blue mr-3"></i>
       <%= t("provinces.new") %>
     </h1>
+    <p class="text-sm text-gray-500 mt-1">Thêm tỉnh/thành phố mới vào hệ thống</p>
   </div>
   
   <%= render "form" %>
