--- a/app/views/sales_workspace/_contact_list.html.erb
+++ b/app/views/sales_workspace/_contact_list.html.erb
@@ -12,7 +12,7 @@
         <th scope="col" class="pl-3 pr-6 py-4 text-right text-xs font-bold text-gray-500 uppercase tracking-wider">Hành động</th>
       </tr>
     </thead>
-    <tbody id="new_contacts_table_body" class="bg-white divide-y divide-gray-100">
+    <tbody id="<%= tab %>_table_body" class="bg-white divide-y divide-gray-100">
       <% contacts.each do |contact| %>
         <tr id="contact_<%= contact.id %>" class="hover:bg-blue-50/50 transition-all duration-200 group relative">
           <!-- Customer Info -->
